Урок 6: Обязательное задание (фикс кода + попытки)

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 # VS Code файлы workspase
 *.code-workspace
+.idea/.gitignore
+.idea/inspectionProfiles/
+.idea/js11_wave.iml
+.idea/jsLinters/
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+node_modules/
+package-lock.json
