Диплом: установил webpack

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,440 @@
-# Created by .ignore support plugin (hsz.mobi)
 .idea/
+node_modules/.bin/
+node_modules/@webassemblyjs/
+node_modules/@xtuc/
+node_modules/acorn/
+node_modules/ajv-errors/
+node_modules/ajv-keywords/
+node_modules/ajv/
+node_modules/ansi-regex/
+node_modules/ansi-styles/
+node_modules/anymatch/
+node_modules/aproba/
+node_modules/arr-diff/
+node_modules/arr-flatten/
+node_modules/arr-union/
+node_modules/array-unique/
+node_modules/asn1.js/
+node_modules/assert/
+node_modules/assign-symbols/
+node_modules/async-each/
+node_modules/atob/
+node_modules/balanced-match/
+node_modules/base/
+node_modules/base64-js/
+node_modules/big.js/
+node_modules/binary-extensions/
+node_modules/bindings/
+node_modules/bluebird/
+node_modules/bn.js/
+node_modules/brace-expansion/
+node_modules/braces/
+node_modules/brorand/
+node_modules/browserify-aes/
+node_modules/browserify-cipher/
+node_modules/browserify-des/
+node_modules/browserify-rsa/
+node_modules/browserify-sign/
+node_modules/browserify-zlib/
+node_modules/buffer-from/
+node_modules/buffer-xor/
+node_modules/buffer/
+node_modules/builtin-status-codes/
+node_modules/cacache/
+node_modules/cache-base/
+node_modules/camelcase/
+node_modules/chalk/
+node_modules/chokidar/
+node_modules/chownr/
+node_modules/chrome-trace-event/
+node_modules/cipher-base/
+node_modules/class-utils/
+node_modules/cliui/
+node_modules/collection-visit/
+node_modules/color-convert/
+node_modules/color-name/
+node_modules/commander/
+node_modules/commondir/
+node_modules/component-emitter/
+node_modules/concat-map/
+node_modules/concat-stream/
+node_modules/console-browserify/
+node_modules/constants-browserify/
+node_modules/copy-concurrently/LICENSE
+node_modules/copy-concurrently/README.md
+node_modules/copy-concurrently/copy.js
+node_modules/copy-concurrently/is-windows.js
+node_modules/copy-concurrently/package.json
+node_modules/copy-descriptor/
+node_modules/core-util-is/
+node_modules/create-ecdh/
+node_modules/create-hash/
+node_modules/create-hmac/
+node_modules/cross-spawn/
+node_modules/crypto-browserify/
+node_modules/cyclist/
+node_modules/debug/
+node_modules/decamelize/
+node_modules/decode-uri-component/
+node_modules/define-property/
+node_modules/des.js/
+node_modules/detect-file/
+node_modules/diffie-hellman/
+node_modules/domain-browser/
+node_modules/duplexify/
+node_modules/elliptic/
+node_modules/emoji-regex/
+node_modules/emojis-list/
+node_modules/end-of-stream/
+node_modules/enhanced-resolve/
+node_modules/errno/
+node_modules/escape-string-regexp/
+node_modules/eslint-scope/
+node_modules/esrecurse/
+node_modules/estraverse/
+node_modules/events/
+node_modules/evp_bytestokey/
+node_modules/execa/
+node_modules/expand-brackets/
+node_modules/expand-tilde/
+node_modules/extend-shallow/
+node_modules/extglob/LICENSE
+node_modules/extglob/README.md
+node_modules/extglob/changelog.md
+node_modules/extglob/index.js
+node_modules/extglob/lib/compilers.js
+node_modules/extglob/lib/extglob.js
+node_modules/extglob/lib/parsers.js
+node_modules/extglob/lib/utils.js
+node_modules/extglob/node_modules/
+node_modules/extglob/package.json
+node_modules/fast-deep-equal/
+node_modules/fast-json-stable-stringify/
+node_modules/figgy-pudding/
+node_modules/file-uri-to-path/
+node_modules/fill-range/
+node_modules/find-cache-dir/
+node_modules/find-up/
+node_modules/findup-sync/
+node_modules/flush-write-stream/
+node_modules/for-in/
+node_modules/fragment-cache/
+node_modules/from2/
+node_modules/fs-write-stream-atomic/
+node_modules/fs.realpath/
+node_modules/fsevents/.travis.yml
+node_modules/fsevents/ISSUE_TEMPLATE.md
+node_modules/fsevents/LICENSE
+node_modules/fsevents/Readme.md
+node_modules/fsevents/binding.gyp
+node_modules/fsevents/build/
+node_modules/fsevents/fsevents.cc
+node_modules/fsevents/fsevents.js
+node_modules/fsevents/node_modules/.bin/
+node_modules/fsevents/node_modules/abbrev/
+node_modules/fsevents/node_modules/ansi-regex/
+node_modules/fsevents/node_modules/aproba/
+node_modules/fsevents/node_modules/are-we-there-yet/
+node_modules/fsevents/node_modules/balanced-match/
+node_modules/fsevents/node_modules/brace-expansion/
+node_modules/fsevents/node_modules/chownr/
+node_modules/fsevents/node_modules/code-point-at/
+node_modules/fsevents/node_modules/concat-map/
+node_modules/fsevents/node_modules/console-control-strings/LICENSE
+node_modules/fsevents/node_modules/console-control-strings/README.md
+node_modules/fsevents/node_modules/console-control-strings/index.js
+node_modules/fsevents/node_modules/console-control-strings/package.json
+node_modules/fsevents/node_modules/core-util-is/
+node_modules/fsevents/node_modules/debug/
+node_modules/fsevents/node_modules/deep-extend/
+node_modules/fsevents/node_modules/delegates/
+node_modules/fsevents/node_modules/detect-libc/
+node_modules/fsevents/node_modules/fs-minipass/
+node_modules/fsevents/node_modules/fs.realpath/
+node_modules/fsevents/node_modules/gauge/
+node_modules/fsevents/node_modules/glob/
+node_modules/fsevents/node_modules/has-unicode/
+node_modules/fsevents/node_modules/iconv-lite/
+node_modules/fsevents/node_modules/ignore-walk/
+node_modules/fsevents/node_modules/inflight/
+node_modules/fsevents/node_modules/inherits/
+node_modules/fsevents/node_modules/ini/
+node_modules/fsevents/node_modules/is-fullwidth-code-point/
+node_modules/fsevents/node_modules/isarray/
+node_modules/fsevents/node_modules/minimatch/
+node_modules/fsevents/node_modules/minimist/
+node_modules/fsevents/node_modules/minipass/
+node_modules/fsevents/node_modules/minizlib/
+node_modules/fsevents/node_modules/mkdirp/
+node_modules/fsevents/node_modules/ms/
+node_modules/fsevents/node_modules/needle/
+node_modules/fsevents/node_modules/node-pre-gyp/
+node_modules/fsevents/node_modules/nopt/
+node_modules/fsevents/node_modules/npm-bundled/
+node_modules/fsevents/node_modules/npm-normalize-package-bin/
+node_modules/fsevents/node_modules/npm-packlist/
+node_modules/fsevents/node_modules/npmlog/
+node_modules/fsevents/node_modules/number-is-nan/
+node_modules/fsevents/node_modules/object-assign/
+node_modules/fse
+vents/node_modules/once/
+node_modules/fsevents/node_modules/os-homedir/
+node_modules/fsevents/node_modules/os-tmpdir/
+node_modules/fsevents/node_modules/osenv/
+node_modules/fsevents/node_modules/path-is-absolute/
+node_modules/fsevents/node_modules/process-nextick-args/
+node_modules/fsevents/node_modules/rc/
+node_modules/fsevents/node_modules/readable-stream/
+node_modules/fsevents/node_modules/rimraf/
+node_modules/fsevents/node_modules/safe-buffer/
+node_modules/fsevents/node_modules/safer-buffer/
+node_modules/fsevents/node_modules/sax/
+node_modules/fsevents/node_modules/semver/
+node_modules/fsevents/node_modules/set-blocking/
+node_modules/fsevents/node_modules/signal-exit/
+node_modules/fsevents/node_modules/string-width/
+node_modules/fsevents/node_modules/string_decoder/
+node_modules/fsevents/node_modules/strip-ansi/
+node_modules/fsevents/node_modules/strip-json-comments/
+node_modules/fsevents/node_modules/tar/
+node_modules/fsevents/node_modules/util-deprecate/
+node_modules/fsevents/node_modules/wide-align/
+node_modules/fsevents/node_modules/wrappy/
+node_modules/fsevents/node_modules/yallist/
+node_modules/fsevents/package.json
+node_modules/fsevents/src/
+node_modules/get-caller-file/
+node_modules/get-stream/
+node_modules/get-value/
+node_modules/glob-parent/
+node_modules/glob/
+node_modules/global-modules/
+node_modules/global-prefix/
+node_modules/graceful-fs/
+node_modules/has-flag/
+node_modules/has-value/
+node_modules/has-values/
+node_modules/hash-base/
+node_modules/hash.js/
+node_modules/hmac-drbg/
+node_modules/homedir-polyfill/
+node_modules/https-browserify/
+node_modules/ieee754/
+node_modules/iferr/
+node_modules/import-local/
+node_modules/imurmurhash/
+node_modules/infer-owner/
+node_modules/inflight/
+node_modules/inherits/
+node_modules/ini/
+node_modules/interpret/
+node_modules/invert-kv/
+node_modules/is-accessor-descriptor/
+node_modules/is-binary-path/
+node_modules/is-buffer/
+node_modules/is-data-descriptor/
+node_modules/is-descriptor/
+node_modules/is-extendable/
+node_modules/is-extglob/
+node_modules/is-fullwidth-code-point/
+node_modules/is-glob/
+node_modules/is-number/
+node_modules/is-plain-object/
+node_modules/is-stream/
+node_modules/is-windows/
+node_modules/is-wsl/
+node_modules/isarray/
+node_modules/isexe/
+node_modules/isobject/
+node_modules/json-parse-better-errors/
+node_modules/json-schema-traverse/
+node_modules/json5/
+node_modules/kind-of/
+node_modules/lcid/
+node_modules/loader-runner/
+node_modules/loader-utils/
+node_modules/locate-path/
+node_modules/lru-cache/
+node_modules/make-dir/
+node_modules/mamacro/
+node_modules/map-age-cleaner/
+node_modules/map-cache/
+node_modules/map-visit/
+node_modules/md5.js/
+node_modules/mem/
+node_modules/memory-fs/
+node_modules/micromatch/CHANGELOG.md
+node_modules/micromatch/LICENSE
+node_modules/micromatch/README.md
+node_modules/micromatch/index.js
+node_modules/micromatch/lib/cache.js
+node_modules/micromatch/lib/compilers.js
+node_modules/micromatch/lib/parsers.js
+node_modules/micromatch/lib/utils.js
+node_modules/micromatch/package.json
+node_modules/miller-rabin/
+node_modules/mimic-fn/
+node_modules/minimalistic-assert/
+node_modules/minimalistic-crypto-utils/
+node_modules/minimatch/
+node_modules/minimist/
+node_modules/mississippi/
+node_modules/mixin-deep/
+node_modules/mkdirp/
+node_modules/move-concurrently/LICENSE
+node_modules/move-concurrently/README.md
+node_modules/move-concurrently/move.js
+node_modules/move-concurrently/package.json
+node_modules/ms/
+node_modules/nan/
+node_modules/nanomatch/
+node_modules/neo-async/
+node_modules/nice-try/
+node_modules/node-libs-browser/
+node_modules/normalize-path/
+node_modules/npm-run-path/
+node_modules/object-assign/
+node_modules/object-copy/
+node_modules/object-visit/
+node_modules/object.pick/
+node_modules/once/
+node_modules/os-browserify/
+node_modules/os-locale/
+node_modules/p-defer/
+node_modules/p-finally/
+node_modules/p-is-promise/
+node_modules/p-limit/
+node_modules/p-locate/
+node_modules/p-try/
+node_modules/pako/
+node_modules/parallel-transform/
+node_modules/parse-asn1/
+node_modules/parse-passwd/
+node_modules/pascalcase/
+node_modules/path-browserify/
+node_modules/path-dirname/
+node_modules/path-exists/
+node_modules/path-is-absolute/
+node_modules/path-key/
+node_modules/pbkdf2/
+node_modules/pify/
+node_modules/pkg-dir/
+node_modules/posix-character-classes/
+node_modules/process-nextick-args/
+node_modules/process/
+node_modules/promise-inflight/
+node_modules/prr/
+node_modules/public-encrypt/
+node_modules/pump/
+node_modules/pumpify/
+node_modules/punycode/
+node_modules/querystring-es3/
+node_modules/querystring/.travis.yml
+node_modules/querystring/History.md
+node_modules/querystring/License.md
+node_modules/querystring/Readme.md
+node_modules/querystring/decode.js
+node_modules/querystring/encode.js
+node_modules/querystring/index.js
+node_modules/querystring/package.json
+node_modules/querystring/test/common-index.js
+node_modules/querystring/test/index.js
+node_modules/querystring/test/tap-index.js
+node_modules/randombytes/
+node_modules/randomfill/
+node_modules/readable-stream/
+node_modules/readdirp/
+node_modules/regex-not/
+node_modules/remove-trailing-separator/
+node_modules/repeat-element/
+node_modules/repeat-string/
+node_modules/require-directory/
+node_modules/require-main-filename/
+node_modules/resolve-cwd/
+node_modules/resolve-dir/
+node_modules/resolve-from/
+node_modules/resolve-url/
+node_modules/ret/
+node_modules/rimraf/
+node_modules/ripemd160/
+node_modules/run-queue/
+node_modules/safe-buffer/
+node_modules/safe-regex/
+node_modules/schema-utils/
+node_modules/semver/
+node_modules/serialize-javascript/
+node_modules/set-blocking/
+node_modules/set-value/
+node_modules/setimmediate/
+node_modules/sha.js/
+node_modules/shebang-command/
+node_modules/sh
+ebang-regex/
+node_modules/signal-exit/
+node_modules/snapdragon-node/
+node_modules/snapdragon-util/
+node_modules/snapdragon/
+node_modules/source-list-map/
+node_modules/source-map-resolve/
+node_modules/source-map-support/
+node_modules/source-map-url/
+node_modules/source-map/
+node_modules/split-string/
+node_modules/ssri/
+node_modules/static-extend/
+node_modules/stream-browserify/
+node_modules/stream-each/
+node_modules/stream-http/
+node_modules/stream-shift/
+node_modules/string-width/
+node_modules/string_decoder/
+node_modules/strip-ansi/
+node_modules/strip-eof/
+node_modules/supports-color/
+node_modules/tapable/
+node_modules/terser-webpack-plugin/
+node_modules/terser/
+node_modules/through2/
+node_modules/timers-browserify/CHANGELOG.md
+node_modules/timers-browserify/LICENSE.md
+node_modules/timers-browserify/README.md
+node_modules/timers-browserify/main.js
+node_modules/timers-browserify/package.json
+node_modules/to-arraybuffer/
+node_modules/to-object-path/
+node_modules/to-regex-range/
+node_modules/to-regex/
+node_modules/tslib/
+node_modules/tty-browserify/
+node_modules/typedarray/
+node_modules/union-value/
+node_modules/unique-filename/
+node_modules/unique-slug/
+node_modules/unset-value/
+node_modules/upath/
+node_modules/uri-js/
+node_modules/urix/
+node_modules/url/
+node_modules/use/
+node_modules/util-deprecate/
+node_modules/util/
+node_modules/v8-compile-cache/
+node_modules/vm-browserify/
+node_modules/watchpack/
+node_modules/webpack-cli/
+node_modules/webpack-sources/
+node_modules/webpack/
+node_modules/which-module/
+node_modules/which/
+node_modules/worker-farm/
+node_modules/wrap-ansi/
+node_modules/wrappy/
+node_modules/xtend/
+node_modules/y18n/
+node_modules/yallist/
+node_modules/yargs-parser/
+node_modules/yargs/
+node_modules/.cache/
+node_modules/fsevents/node_modules/once/
+node_modules/shebang-regex/
+node_modules/
