--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --open --mode=development",
-    "build": "webpack mode=production"
+    "build": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
-    "element-closest": "^3.0.2"
+    "element-closest": "^3.0.2",
+    "nodelist-foreach-polyfill": "^1.2.0"
   }
 }
